# profile-io

./: .gitignore  Cargo.toml  LICENSE
src/: audio.rs  cli.rs  dispatcher.rs  display.rs  error.rs  main.rs  manager.rs  notifications.rs  profile.rs
src/audio/: audio_config.rs  audio_error.rs  audio_manager.rs  pipe_wire_audio_manager.rs
src/display/: display_error.rs  display_manager.rs  hyprland_display_manager.rs  mode.rs  monitor.rs
src/manager/: display_manager.rs  error.rs  hyprland_display_manager.rs  mode.rs  monitor.rs  size.rs  transformation.rs  validation_error.rs
src/notifications/: notification_error.rs  notifications_manager.rs
src/profile/: config.rs  monitor_config.rs  profile.rs  profiles.rs  profiles_manager.rs  validation_error.rs  workspace_config.rs
