[package]
name = "profile-io"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
serde_json = { version = "1.0.149" }
serde = { version = "1.0.228", features = ["derive"] }
num_enum = { version = "0.7.6" }
uuid = { version = "1.23.0", features = ["v4"] }
dirs = "6.0.0"
toml = "1.1.2+spec-1.1.0"
